# textual-forms

./: LICENCE.txt  Makefile  README.md  app.py  container_form.py  field.py  form.py  form_test_app.py  forms_test_app.py  forms_test_app.tcss  mkdocs.yml  pyproject.toml  widget.py
docs/: index.md
docs/architecture/: fields_and_widgets.md
scripts/: app.py
src/: release.py  setver.py
src/textual_forms/: __init__.py  app.py  app.tcss  field.py  form.py  validators.py  version.py  widget.py
src/textual_forms/demo/: __init__.py  testform.py
tests/: __init__.py  form_test_app.py  test_data_handling.py  test_form_basics.py  test_string_field.py  test_version_update.py  test_versioning.py
