[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textual-forms"
version = "0.1.0"
description = "A declarative forms framework for Textual applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Steve Holden", email = "steve@holdenweb.com"}
]
keywords = ["textual", "forms", "tui", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
]

dependencies = [
    "textual>=0.41.0",
]

# Define the entry point for uvx
[project.scripts]
forms-app = "textual_forms.app:main"

[project.urls]
Homepage = "https://github.com/holdenweb/textual-forms"
Repository = "https://github.com/holdenweb/textual-forms"
Issues = "https://github.com/holdenweb/textual-forms/issues"

[tool.hatch.build.targets.wheel]
packages = ["textual_forms"]

# Exclude development files from the distribution
[tool.hatch.build.targets.wheel.sources]
"textual_forms" = "textual_forms"

[tool.hatch.build.targets.sdist]
include = [
    "src/textual_forms/",
    "README.md",
    "LICENSE",
]
exclude = [
    "scripts/",
    "lib/",
    "tests/",
]